@@ -62,9 +62,6 @@ public class VirtualThreadTest extends AbstractJDITest {
 
 	/**
 	 * Init the fields that are used by this test only.
-	 *
-	 * @throws SecurityException
-	 * @throws NoSuchFieldException
 	 */
 	@Override
 	public void localSetUp() {
@@ -117,7 +114,7 @@ public class VirtualThreadTest extends AbstractJDITest {
 		if (!outputFolder.exists()) {
 			outputFolder.mkdir();
 		}
-		String[] options = new String[] { "--enable-preview", "--release", "19", "-d", outputFolder.getAbsolutePath(), "-g", "-proc:none" };
+		String[] options = new String[] { "--release", "21", "-d", outputFolder.getAbsolutePath(), "-g", "-proc:none" };
 		final StringWriter output = new StringWriter();
 		CompilationTask task = compiler.getTask(output, fileManager, diagnosticCollector, Arrays.asList(options), null, javaFileObjects);
 		boolean result = task.call();
